--- a/videoStreamingAPI/package.json
+++ b/videoStreamingAPI/package.json
@@ -10,13 +10,15 @@
     "dev": "nodemon dist/app"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
