--- a/videoStreamingAPI/package.json
+++ b/videoStreamingAPI/package.json
@@ -18,6 +18,9 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-parser": "^10.0.3",
+    "swagger-ui-express": "^4.6.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -27,6 +30,8 @@
     "@types/morgan": "^1.9.6",
     "@types/multer": "^1.4.8",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3"
   }
 }
