--- a/videoStreamingAPI/package.json
+++ b/videoStreamingAPI/package.json
@@ -10,11 +10,13 @@
     "dev": "nodemon dist/app"
   },
   "dependencies": {
+    "@deepgram/sdk": "^2.4.0",
     "add": "^2.0.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -27,11 +29,12 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/ffmpeg-static": "^3.0.1",
     "@types/morgan": "^1.9.6",
     "@types/multer": "^1.4.8",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2",
     "@types/swagger-jsdoc": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.3"
+    "@types/swagger-ui-express": "^4.1.3",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
